# instaGRAAL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  cuda_lib_gl_single.py  deploy.sh  fragment.py  glutil.py  gpustruct.py  init_nuisance.py  kernel_sparse_adapt.cu  leastsqbound.py  main_single_proc.py  optim_rippe_curve_update.py  parse_info_frags.py  progressbar.py  pyproject.toml  pyramid.py  pyramid_sparse.py  requirements.txt  setup.py  simu_single.py  terminal_progress.py  vector.py
.github/workflows/: cd.yml  ci.yml  docker.yml  test-cpu.yml  test-gpu.yml
doc/: Makefile  conf.py  environment.yml  index.rst  requirements.txt
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/api/: instagraal.doctree  modules.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_modules/: index.html
doc/_build/html/_modules/instagraal/: cuda_lib_gl_single.html  fragment.html  gpustruct.html  init_nuisance.html  instagraal.html  leastsqbound.html  optim_rippe_curve_update.html  parse_info_frags.html  pyramid_sparse.html  simu_single.html  vector.html
doc/_build/html/_sources/: index.rst.txt
doc/_build/html/_sources/api/: modules.rst.txt
doc/_build/html/_static/: documentation_options.js
doc/_build/html/_static/css/: theme.css
doc/_build/html/api/: instagraal.html  modules.html
doc/api/: instagraal.rst
example/data/: info_contigs.txt
example/data/main/: info_contigs.txt
example/data/polish/: new_info_frags.txt
instagraal/: __init__.py  cuda_lib_gl_single.py  glutil.py  gpustruct.py  init_nuisance.py  instagraal.py  linkage.py  log.py  parse_info_frags.py  pyramid.py  pyramid_sparse.py  simu_single.py  terminal_progress.py  timing.py
instagraal/kernels/: kernel_sparse.cu  kernel_sparse_adapt.cu
scripts/: generate_test_data.sh  instagraal-setup  make_insilico_assembly.py
src/instagraal/: __init__.py  __main__.py  _scaffold_correct.py  _scaffold_io.py  _scaffold_viz.py  assembly_stats.py  cuda_lib_gl_single.py  fragment.py  gpustruct.py  init_nuisance.py  instagraal.py  leastsqbound.py  log.py  optim_rippe_curve_update.py  parse_info_frags.py  post.py  pre.py  pyramid_sparse.py  simu_single.py  vector.py  version.py
src/instagraal/cli/: __init__.py  endtoend.py  main.py  polish.py  post.py  pre.py  stats.py  test.py
src/instagraal/kernels/: kernel_sparse.cu  kernel_sparse_adapt.cu
tests/: conftest.py  test_assembly_stats.py  test_endtoend.py  test_instagraal.py  test_instagraal_gpu.py  test_polish.py  test_post.py
tests/data/: new_info_frags.txt
tools/pycuda-stub/: pyproject.toml
tools/pycuda-stub/src/pycuda/: __init__.py  autoinit.py  characterize.py  compiler.py  driver.py  gpuarray.py  tools.py
