[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagraal"
version = "0.1.6"
description = "Large genome reassembly based on Hi-C data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.8"
authors = [
    { name = "Lyam Baudry", email = "lyam.baudry@pasteur.fr" },
    { name = "Hervé Marie-Nelly" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "codepy",
    "h5py",
    "docopt",
    "biopython",
    "pycuda",
]
[project.optional-dependencies]
test = [
    "coverage[toml]",
    "isort",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "pytest-order",
    "ruff",
]
docs = [
    'autodoc',
    'sphinx-autoapi',
    "autodocsumm",
    "sphinxcontrib-napoleon",
    "m2r",
    "recommonmark",
    "Sphinx>=1.6",
    "sphinx-autobuild",
    "sphinx-click",
    "furo",
    "pydata-sphinx-theme",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "lxml[html_clean]",
]
dev = [
    "instagraal[test]",
    "python-semantic-release",
    "pre-commit",
    "pylint",
    "mypy",
    "black",
    "ruff",
    "twine",
    "ipython"
]


[project.urls]
Homepage = "https://github.com/koszullab/instagraal"
Repository = "https://github.com/koszullab/instagraal"

[project.scripts]
instagraal = "instagraal.instagraal:main"
instagraal-polish = "instagraal.parse_info_frags:main"

[tool.hatch.build.targets.wheel]
packages = ["src/instagraal"]

[tool.hatch.build.targets.sdist]
include = [
    "src/instagraal/",
    "scripts/",
    "example/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130
src = ["src"]
exclude = [
    "bench/*",
    ".venv",
    "__main__.py",
]
lint.ignore = ["E402", "I001", "B008", "B006"]
lint.extend-select = [
    "B",  # bugbear
    "E",  # style errors
    "F",  # pyflakes
    "I",  # isort
    "RUF", # ruff-specific rules
    # "UP", # pyupgrade
    "W",  # style  warnings
]
lint.isort.known-first-party = ["instagraal"]

[tool.pytest.ini_options]
markers = ["order: mark test to run in a specific order"]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=instagraal",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["tests"]

