[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagraal"
version = "0.2.0"
description = "Large genome reassembly based on Hi-C data"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "Lyam Baudry", email = "lyam.baudry@pasteur.fr" },
    { name = "Hervé Marie-Nelly" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "biopython>=1.78",
    "pycuda",
    "click",
    "cooler",
    "pandas",
    "pyfaidx",
]
[project.optional-dependencies]
test = [
    "coverage[toml]",
    "isort",
    "python-dotenv",
    "pytest",
    "pytest-cov",
    "pytest-order",
    "ruff",
]
docs = [
    'autodoc',
    'sphinx-autoapi',
    "autodocsumm",
    "sphinxcontrib-napoleon",
    "m2r",
    "recommonmark",
    "Sphinx>=1.6",
    "sphinx-autobuild",
    "sphinx-click",
    "furo",
    "pydata-sphinx-theme",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "lxml[html_clean]",
]
dev = [
    "instagraal[test]",
    "python-semantic-release",
    "pre-commit",
    "pylint",
    "mypy",
    "black",
    "ruff",
    "twine",
    "ipython"
]


[project.urls]
Homepage = "https://github.com/koszullab/instagraal"
Repository = "https://github.com/koszullab/instagraal"

[project.scripts]
instagraal = "instagraal.cli.main:main"
instagraal-endtoend = "instagraal.cli.endtoend:main"
instagraal-polish = "instagraal.cli.polish:main"
instagraal-post = "instagraal.cli.post:main"
instagraal-pre = "instagraal.cli.pre:main"
instagraal-stats = "instagraal.cli.stats:main"
instagraal-test = "instagraal.cli.test:main"

[tool.hatch.build.targets.wheel]
packages = ["src/instagraal"]
# tests/data/ is intentionally omitted – test data is not shipped in the wheel.

[tool.hatch.build.targets.sdist]
include = [
    "src/instagraal/",
    "scripts/",
    "tests/data/",
    "example/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 130

[tool.ruff]
line-length = 130
src = ["src"]
exclude = [
    "bench/*",
    ".venv",
    "__main__.py",
]
lint.ignore = ["E402", "I001", "B008", "B006"]
lint.extend-select = [
    "B",  # bugbear
    "E",  # style errors
    "F",  # pyflakes
    "I",  # isort
    "RUF", # ruff-specific rules
    # "UP", # pyupgrade
    "W",  # style  warnings
]
lint.isort.known-first-party = ["instagraal"]

[tool.pytest.ini_options]
markers = ["order: mark test to run in a specific order"]
minversion = "7"
log_cli_level = "INFO"
xfail_strict = true
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=instagraal",
    "--cov-config=pyproject.toml",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
filterwarnings = ["ignore::PendingDeprecationWarning"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unreachable = true
# Third-party scientific/CUDA libraries have no stubs; ignore missing imports
# rather than failing on every numpy/scipy/pycuda reference.
ignore_missing_imports = true
